--- a/package.json
+++ b/package.json
@@ -16,7 +16,9 @@
     "react-router-dom": "^5.2.0",
     "react-scripts": "3.4.3",
     "react-select": "^3.1.0",
-    "react-tilt": "^0.1.4"
+    "react-show-more-text": "^1.4.4",
+    "react-tilt": "^0.1.4",
+    "read-more-react": "^1.0.10"
   },
   "scripts": {
     "start": "react-scripts start",
