--- a/package.json
+++ b/package.json
@@ -14,10 +14,12 @@
     "node-sass": "^4.14.1",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
+    "react-paginate": "^6.5.0",
     "react-router-dom": "^5.2.0",
     "react-scripts": "3.4.3",
     "react-select": "^3.1.0",
     "react-show-more-text": "^1.4.4",
+    "react-slick": "^0.27.12",
     "react-tilt": "^0.1.4",
     "read-more-react": "^1.0.10"
   },
